@@ -1,5 +1,10 @@
 2008-07-10  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/plot/CategoryPlot.java
+    (draw): Check outline visibility.
+
+2008-07-10  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/time/ohlc/OHLCSeriesCollection.java
     (getXPosition): New method,
     (setXPosition): Likewise,
